--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+/.env.node
+/.env.python
 
 # compiled output
 /dist
@@ -9,6 +11,7 @@
 
 # dependencies
 /node_modules
+/.angular
 
 # profiling files
 chrome-profiler-events*.json
