--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
 		"**/.hg": true,
 		"**/CVS": true,
 		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
 		"**/.classpath": true,
 		"**/.project": true,
 		"**/.settings": true,
@@ -32,7 +33,11 @@
 		"tsconfig.json": true,
 		"tsconfig.spec.json": true,
 		"tslint.json": true,
-		"yarn.lock": true
+		"yarn.lock": true,
+		"**/.env.node": true,
+		"**/.angular": true,
+		"**/dist": true
 	},
-	"workspace.isHidden": true
+	"workspace.isHidden": true,
+	"explorerExclude.backup": null
 }
